k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scoobychat
  labels:
    app: scoobychat
spec:
  ports:
    - port: 9000
  type: ClusterIP
  selector:
    app: scoobychat
